# EECS498598-W26-ZKP

./: README.md
discussion/d01/: Cargo.toml
discussion/d01/src/: ex01.rs  ex02.rs  ex03.rs  ex04.rs  ex05.rs  ex06.rs  lib.rs
projects/p1/: Cargo.toml
projects/p1/src/: curve.rs  lib.rs  moduli.rs  poly.rs  zq.rs
projects/p1/src/poly/: parser.rs
projects/p1/tests/: curve_tests.rs  poly_test.rs  zq_tests.rs
